--- a/Code/app/src/main/res/layout/activity_enclousure.xml
+++ b/Code/app/src/main/res/layout/activity_enclousure.xml
@@ -75,6 +75,21 @@
                     app:hintTextColor="@color/colorBlack">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_enclosure_empName"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="Employee Name" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/EditTextOutline"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:boxStrokeColor="@color/colorBlack"
+                    app:hintTextColor="@color/colorBlack">
+
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/et_enclosure_forestDivision"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
