--- a/Code/app/src/main/res/layout/activity_water_soruce_development_scheme.xml
+++ b/Code/app/src/main/res/layout/activity_water_soruce_development_scheme.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CD.WaterHarvestingScheme.WaterHarvestingSchemesActivity">
+    tools:context=".CD.WaterSoruceDevelopmentScheme.WaterSoruceDevelopmentSchemeActivity">
 
     <RelativeLayout
         android:id="@+id/action_bar"
@@ -26,9 +26,9 @@
             android:layout_centerInParent="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:text="Water Harvesting Schemes"
+            android:text="Water Source Development Scheme"
             android:textColor="@color/colorWhite"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:textStyle="bold" />
 
     </RelativeLayout>
