--- a/Code/app/src/main/res/layout/row_view_vdc.xml
+++ b/Code/app/src/main/res/layout/row_view_vdc.xml
@@ -15,7 +15,7 @@
         app:cardCornerRadius="20dp"
         app:cardElevation="10dp">
 
-       <!-- <RelativeLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp">
@@ -25,7 +25,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:text="Date :"
+                android:text="Emp No :"
+                android:textColor="@color/colorWhite"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_rowViewVdc_Employee_No"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/tv_da"
+                android:layout_marginLeft="8dp"
+                android:text="00000"
                 android:textColor="@color/colorWhite"
                 android:textSize="16dp"
                 android:textStyle="bold" />
@@ -33,15 +44,26 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_toRightOf="@+id/tv_da"
-                android:text="12/12/21"
+                android:text="Name :"
+                android:layout_toLeftOf="@+id/tv_rowViewVdc_empName"
+                android:textColor="@color/colorWhite"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_rowViewVdc_empName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:layout_marginLeft="8dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="8dp"
                 android:textColor="@color/colorWhite"
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
 
-        </RelativeLayout>-->
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/LL_main"
