--- a/Code/app/src/main/res/layout/activity_water_harvesting_schemes.xml
+++ b/Code/app/src/main/res/layout/activity_water_harvesting_schemes.xml
@@ -59,7 +59,42 @@
                     app:hintTextColor="@color/colorBlack">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_farm_forestry_NameOfSubDivisionRange"
+                        android:id="@+id/et_waterHarvestingScheme_empNo"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="Employee No"
+                        android:inputType="text" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/EditTextOutline"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:boxStrokeColor="@color/colorBlack"
+                    app:hintTextColor="@color/colorBlack">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_waterHarvestingScheme_empName"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="Name of Employee"
+                        android:inputType="text" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/EditTextOutline"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:boxStrokeColor="@color/colorBlack"
+                    app:hintTextColor="@color/colorBlack">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_waterHarvestingScheme_NameOfDivision"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:hint="Name of Division"
