--- a/Code/app/src/main/res/layout/activity_g_f_m_c.xml
+++ b/Code/app/src/main/res/layout/activity_g_f_m_c.xml
@@ -54,7 +54,40 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_jfmc_nameOfForestDivision"
+                    android:id="@+id/et_jfmc_employeeNo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Employee No"
+                    android:inputType="text" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/EditTextOutline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:boxStrokeColor="@color/colorBlack"
+                app:hintTextColor="@color/colorBlack">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_jfmc_employeeName"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Employee Name"
+                    android:inputType="text" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/EditTextOutline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:boxStrokeColor="@color/colorBlack"
+                app:hintTextColor="@color/colorBlack">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_jfmc_nameOfForestDivision"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Name of Forest Division"
@@ -72,7 +105,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_jfmc_nameOfSubDivisionRange"
+                    android:id="@+id/et_jfmc_nameOfSubDivisionRange"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Name of Sub Division | Range"
@@ -89,7 +122,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_jfmc_nameOfVillageVDC"
+                    android:id="@+id/et_jfmc_nameOfVillageVDC"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Name of village | VDC"
@@ -106,7 +139,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_jfmc_nameOfJfmc"
+                    android:id="@+id/et_jfmc_nameOfJfmc"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Name of JFMC"
@@ -124,7 +157,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_jfmc_dateOfEstablishmentRegistration"
+                    android:id="@+id/et_jfmc_dateOfEstablishmentRegistration"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Date of Establishment | Registration"
@@ -141,7 +174,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_jfmc_nameOfPresident"
+                    android:id="@+id/et_jfmc_nameOfPresident"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Name of President"
@@ -158,7 +191,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_jfmc_contact"
+                    android:id="@+id/et_jfmc_contact"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Contact Number"
